--- a/angular.json
+++ b/angular.json
@@ -74,6 +74,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "port": 4222
+          },
           "configurations": {
             "production": {
               "buildTarget": "aqyldy-kundelik-front:build:production"
