--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@ngx-translate/core": "^17.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "crypto-js": "^4.2.0",
+    "echarts": "^6.0.0",
     "express": "^4.18.2",
+    "ngx-echarts": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
